--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -68,3 +68,24 @@
     display: flex;
     justify-content: space-between;
 }
+
+button {
+    cursor: pointer;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    margin: 100px auto;
+    width: 300px;
+    border-radius: 8px;
+}
